Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89203

qtdeclarative build error due to 'trunc' already defined when doing a static build on Windows

    XMLWordPrintable

Details

    • Windows
    • fb4de27768935393744cbd67e9789d325e70e742 (qt/qtdeclarative/dev) 2b9dda3e4c6aeb294f38e827c0d98ac63d2863b3 (qt/qtdeclarative/6.0) 351695310dbc2b78fb924d2637dd8980106a4482 (qt/tqtc-qtdeclarative/tqtc/lts-5.15)

    Description

      FAILED: bin/qmltestrunner.exe
      cmd.exe /C "cd . && "C:\Program Files\CMake\bin\cmake.exe" -E vs_link_exe --intdir=tools\qmltestrunner\CMakeFiles\qmltestrunner.dir --rc=C:\PROGRA~2\WI3CF2~1\10\bin\100190~1.0\x64\rc.exe --mt=C:\PROGRA~2\WI3CF2~1\10\bin\100190~1.0\x64\mt.exe --manifests – C:\PROGRA~2\MIB055~1\2019\Preview\VC\Tools\MSVC\1428~1.295\bin\Hostx64\x64\link.exe @CMakeFiles\qmltestrunner.rsp /out:bin\qmltestrunner.exe /implib:tools\qmltestrunner\qmltestrunner.lib /pdb:bin\qmltestrunner.pdb /version:0.0 /machine:x64 /nologo /debug /subsystem:console -DYNAMICBASE -NXCOMPAT && cd ."
      LINK: command "C:\PROGRA~2\MIB055~1\2019\Preview\VC\Tools\MSVC\1428~1.295\bin\Hostx64\x64\link.exe @CMakeFiles\qmltestrunner.rsp /out:bin\qmltestrunner.exe /implib:tools\qmltestrunner\qmltestrunner.lib /pdb:bin\qmltestrunner.pdb /version:0.0 /machine:x64 /nologo /debug /subsystem:console -DYNAMICBASE -NXCOMPAT /MANIFEST /MANIFESTFILE:bin\qmltestrunner.exe.manifest" failed (exit code 1169) with the following output:
      Qt6Qmld.lib(qv4mathobject.cpp.obj) : error LNK2005: trunc already defined in libucrtd.lib(trunc.obj)
      Qt6Qmld.lib(qv4stringobject.cpp.obj) : error LNK2005: trunc already defined in libucrtd.lib(trunc.obj)
      Creating library tools\qmltestrunner\qmltestrunner.lib and object tools\qmltestrunner\qmltestrunner.exp
      bin\qmltestrunner.exe : fatal error LNK1169: one or more multiply defined symbols fou
      (Note: static windows build)

      Attachments

        For Gerrit Dashboard: QTBUG-89203
        # Subject Branch Project Status CR V

        Activity

          People

            qtbuildsystem Qt Build System Team
            neumann-a Alexander Neumann
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes