QV4 Engine: Remove MSVC special casing

This patch removes a workaround for old versions of MSVC; we should be
able to rely on the standard library nowadays.

Original-patch-by: Alexander Neumann
Fixes: QTBUG-89203
Change-Id: I8047565000fc7e4e3b8ac28584ff4a479b648274
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>