src/qml/jsruntime/qv4mathobject.cpp
@@ -47,7 +47,6 @@
 #include <QtCore/private/qnumeric_p.h>
 #include <QtCore/qthreadstorage.h>
 
-#include <math.h>
 #include <cmath>
 
 using namespace QV4;
